fix: hide scrollbar in textarea for improved aesthetics

--- a/admin/src/index.css
+++ b/admin/src/index.css
@@ -27,3 +27,7 @@ textarea {
   .animate-spin {
     animation: spin 1s linear infinite;
   }
+
+  ::-webkit-scrollbar{
+    display: none;
+  }
